# PiCmake_hello

./: CMakeLists.txt  README.md
inc/: hello_world.h
src/: hello_wolrd.c
